--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DPA</title>
+  <!-- Favicon / Shortcut icon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32.png">
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+  
+  <!-- Apple Touch Icon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+  
+  <!-- Android Chrome -->
+  <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon-192.png">
   <style>
     html, body {
       margin: 0;
@@ -121,7 +130,7 @@
   <section id="contact">
     <h2>Contact</h2>
     <p>以下のフォームからご連絡ください。</p>
-    <iframe src="https://forms.gle/T2mDH24cqvSnR9Y3A" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+    <iframe src="https://forms.gle/T2mDH24cqvSnR9Y3A" width="100%" height="1200" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
   </section>
 
   <footer>
