ページの見出し周りの修正

--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
 </head>
 <body>
   <div class="hero">
-    <h1>DPA</h1>
+    <h1 style="position: absolute; left: -9999px;">DPA</h1>
+    <img src="assets/favicon-192.png" alt="DPA Logo" style="width: 120px; height: auto; margin-bottom: 1rem;">
+    <p style="font-size: 1.2rem; font-weight: 500; color: #eee; margin: 0.5rem 0;">Digital Platform Associates</p>
     <p class="tagline">Create. Connect. Change.</p>
   </div>
 
