リンクの調整

--- a/index.html
+++ b/index.html
@@ -119,10 +119,12 @@
 
   <section id="projects">
     <h2>Projects</h2>
-    <p><a href="#">LINEスタンプ（つんでれネコ・にゃも など）</a></p>
+    <p><a href="https://store.line.me/stickershop/author/5305453/ja" target="_blank" rel="noopener noreferrer">
+      LINEスタンプ（つんでれネコ・にゃも など）
+    </a></p>
     <p><a href="#">GPTs公開（喪黒GPT・銭天堂GPT）</a></p>
-    <p><a href="#">アプリ開発（準備中）</a></p>
-    <p><a href="#">SaaS開発（準備中）</a></p>
+    <p>アプリ開発（準備中）</p>
+    <p>SaaS開発（準備中）</p>
   </section>
 
   <div class="interval2">
