--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
     <p><a href="https://store.line.me/stickershop/author/5305453/ja" target="_blank" rel="noopener noreferrer">
       LINEスタンプ（つんでれネコ・にゃも など）
     </a></p>
-    <p><a href="#">GPTs公開（喪黒GPT・銭天堂GPT）</a></p>
+    <p><a href="https://chatgpt.com/g/g-680c7f0e8f988191bcc948bdfa591710-sang-hei-gpt" target="_blank" rel="noopener noreferrer nofollow">
+      オリジナルGPT「喪黒GPT」公開中
+    </a></p>
     <p>アプリ開発（準備中）</p>
     <p>SaaS開発（準備中）</p>
   </section>
