リンクの調整

--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
     <p><a href="https://chatgpt.com/g/g-680c7f0e8f988191bcc948bdfa591710-sang-hei-gpt" target="_blank" rel="noopener noreferrer nofollow">
       オマージュGPT「喪黒GPT」公開中
     </a></p>
+    <p><a href="https://chatgpt.com/g/g-680f779877bc8191b35efc476ea700fe-xiao-xue-xiao-gao-xue-nian-noguo-yu-li-upsahoto" target="_blank" rel="noopener noreferrer nofollow">
+      学習用GPT「小学生の国語力UPサポート」公開中
+    </a></p>
     <p>アプリ開発（準備中）</p>
     <p>SaaS開発（準備中）</p>
   </section>
